Bug 506022 - Reordering virtual desktop in overview break virtual desktop ordering
Summary: Reordering virtual desktop in overview break virtual desktop ordering
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 6.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 506117 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-06-23 07:49 UTC by dmatteo002
Modified: 2025-06-24 18:47 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments
Video of the bug (3.48 MB, video/mp4)
2025-06-23 07:49 UTC, dmatteo002
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dmatteo002 2025-06-23 07:49:12 UTC
Created attachment 182542 [details]
Video of the bug

SUMMARY
When moving a virtual desktop in the overview effect that correctly apply only to the overview. Instead the ordering in real space is broken as it possible to see with OSD. Also the position in the overview are not the same as in the real space.
(It is difficult to explain, please have a look at the video).

STEPS TO REPRODUCE
1. Open overview
2. Swap two virtual desktop (by dragging from empty space one onto another)
3. Close overview
4. Move between virtual desktop with shortcut or gesture

OBSERVED RESULT
OSD show warp to another virtual desktop but not the one expected by the gesture/shortcut.
The order which can be seen by moving around is different to that in the overview.

EXPECTED RESULT
OSD should show the movement the gesture is representing.
The order in overview and "real space" should be the same

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.3-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7735HS with Radeon Graphics
Memory: 16 GiB of RAM (14,9 GiB usable)


ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-06-23 08:18:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7801
Comment 2 Vlad Zahorodnii 2025-06-23 14:01:24 UTC
Git commit 0742959bfdb6a55eba2859cceaffdd80193d062f by Vlad Zahorodnii.
Committed on 23/06/2025 at 13:12.
Pushed by vladz into branch 'master'.

Sync virtual desktop grid to new virtual desktop order

The virtual desktop grid has a copy of the virtual desktop list, which
needs to be updated when a virtual desktop is moved.

M  +2    -0    src/virtualdesktops.cpp

https://invent.kde.org/plasma/kwin/-/commit/0742959bfdb6a55eba2859cceaffdd80193d062f
Comment 3 Vlad Zahorodnii 2025-06-23 16:20:39 UTC
Git commit 9ea3855e93c4e8939afbc441408fd0459e8f6b29 by Vlad Zahorodnii.
Committed on 23/06/2025 at 14:45.
Pushed by vladz into branch 'Plasma/6.4'.

Sync virtual desktop grid to new virtual desktop order

The virtual desktop grid has a copy of the virtual desktop list, which
needs to be updated when a virtual desktop is moved.


(cherry picked from commit 0742959bfdb6a55eba2859cceaffdd80193d062f)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +2    -0    src/virtualdesktops.cpp

https://invent.kde.org/plasma/kwin/-/commit/9ea3855e93c4e8939afbc441408fd0459e8f6b29
Comment 4 Nate Graham 2025-06-24 18:47:00 UTC
*** Bug 506117 has been marked as a duplicate of this bug. ***