Sync virtual desktop grid to new virtual desktop order

The virtual desktop grid has a copy of the virtual desktop list, which
needs to be updated when a virtual desktop is moved.

BUG: 506022