src/virtualdesktops.cpp
@@ -545,6 +545,8 @@ void VirtualDesktopManager::moveVirtualDesktop(VirtualDesktop *desktop, int posi
 #endif
     }
 
+    updateLayout();
+
     save();
     Q_EMIT desktopMoved(desktop, position);
 }
